{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 96,
  "lineage": "8ae46a57-3635-3d56-4564-90d61ac33c75",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-08T05:39:10.999-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/delta-carving-312819/global/firewalls/nfsfirewall",
            "log_config": [],
            "name": "nfsfirewall",
            "network": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/global/networks/default",
            "priority": 1000,
            "project": "delta-carving-312819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/global/firewalls/nfsfirewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-08T05:39:11.080-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/delta-carving-312819/global/firewalls/nfsfirewall-internal",
            "log_config": [],
            "name": "nfsfirewall-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/global/networks/internalnw",
            "priority": 1000,
            "project": "delta-carving-312819",
            "self_link": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/global/firewalls/nfsfirewall-internal",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "testinstance1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "seconddisk",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/zones/europe-west2-a/disks/seconddisk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200716",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/zones/europe-west2-a/disks/testinstance1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/delta-carving-312819/zones/europe-west2-a/instances/testinstance1",
            "instance_id": "4544642806194059412",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "oJPLxhap8jM=",
            "metadata_startup_script": "#!/bin/bash  -x \n\n\nfdisk -l\n\n\nsudo parted -s -a optimal /dev/sdb mklabel gpt\nsudo echo \"y\" |mkfs -t ext4   /dev/sdb\n\n\nfstab=/etc/fstab\n\nif [[ $(grep -q \"sdb\" \"$fstab\") ]]\nthen\n    sudo oecho \"#nfs-disc\" \u003e\u003e /etc/fstab\n    sudo echo \"/dev/sdb /mnt/nfs_share ext4 defaults 0 2\" \u003e\u003e /etc/fstab\nelse\n    echo \"Entry in fstab exists.\"\nfi\n\n\nsudo mkdir -p /mnt/nfs_share\nsudo mount /dev/sdb /mnt/nfs_share\n\n\n\n\n [...]
            "name": "testinstance1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.128.161",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/global/networks/default",
                "network_ip": "10.154.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "delta-carving-312819"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/global/networks/internalnw",
                "network_ip": "192.168.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/regions/europe-west2/subnetworks/internal-network",
                "subnetwork_project": "delta-carving-312819"
              }
            ],
            "project": "delta-carving-312819",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/delta-carving-312819/zones/europe-west2-a/instances/testinstance1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "test"
            ],
            "tags_fingerprint": "24toQCp64m8=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_disk.nfsdisk"
          ]
        }
      ]
    }
  ]
}